Changes in version 1.5.1 (??.?? 2009)

 - Make sure a missing font does not corrupt the skin.

 - Fix getAngle in vector2d as suggested by xray. This has only a minor impact on s32 vectors.

 - bugfix: CGUIFont::getCharacterFromPos regards now kerning (found by Arras)

 - Add support for range fog in some OpenGL versions.

 - Fix for shadow volume removal, submitted by vitek.

 - Avoid using X11 autorepeat to deal with broken X11 versions.

 - Speculars are properly exported into mtl files now, instead of corrupting them.

 - Binary type loading in attributes fixed.

 - bugfix: Use make_lower throughout for spritebank filenames (found and patched by Ion Dune)

 - STL loader fixed: Right-handedness corrected, normals and bboxes are correctly added now.

 - bugfix: CUnZipReader::openFile no longer returns true for empty files. Corresponding test added.

 - Big endian issues in .x loader fixed.

 - HSLColor methods repaired.

 - copyToScaling fixed.

 - Fixed problem with highlighting menus when mouse was outside sub-menu area. 

 - bugfix (2796207): menu acted (wrongly) on left-click down instead of left-click up.

 - bswap16 fallback macro fixed

 - getBaseName fixed to work correct with dots in filenames.

 - static method isDriverSupported allows for simple check of available drivers.

 - Some defines added to check for the Irrlicht version of the library.

 - Make sure all renderstates are properly initialized

 - Wrong size for main depth buffer fixed.

 - Fix 3ds shininess to the allowed range.

 - Fix loading of Collada files from irrEdit 1.2

 - Remove texture pointers after texture clear.

 - WindowsCE pathnames fixed.

 - Some virtuals are now overridden as expected.

 - Incomplete FBOs are properly signalled now

 - Update to libpng 1.2.35, fixed issues on 64bit machines with system's libpng.

 - Fixed wrong grab/drop in setOverrideFont

 - Added draw2dRectOutline

 - rectf and recti added.
